Pull request #1020: AG-9091 Filtering log fixed column width on single column resize
Merge in EXTENSIONS/browser-extension from feature/AG-9091 to feature/AG-2737

Squashed commit of the following:

commit b6739e9a15191399f3c8c16caebb092d4bccfb49
Merge: 87d8f751e 8eeb0a5e7
Author: Vladimir Zhelvis <v.zhelvis@adguard.com>
Date:   Fri Jul 30 13:28:33 2021 +0300

    Merge branch 'feature/AG-2737' into feature/AG-9091

commit 87d8f751e7f33f9c9baab1f3a35c39378fa6d885
Author: Vladimir Zhelvis <v.zhelvis@adguard.com>
Date:   Fri Jul 30 12:45:29 2021 +0300

    fix resize calc

commit b40e17d5ceaac2c1030bf50453d815814785e24a
Author: Vladimir Zhelvis <v.zhelvis@adguard.com>
Date:   Thu Jul 29 21:48:35 2021 +0300

    update filtering log table

commit 0b7f3306c3a4e4f2692fde9c79ed7ea1312e572b
Author: Vladimir Zhelvis <v.zhelvis@adguard.com>
Date:   Thu Jul 29 18:02:38 2021 +0300

    update filtering log column resize behavior

--- a/Extension/src/pages/filtering-log/components/FilteringEvents/filtering-events.pcss
+++ b/Extension/src/pages/filtering-log/components/FilteringEvents/filtering-events.pcss
@@ -10,7 +10,6 @@
     &__inner {
         table-layout: fixed;
         width: 100%;
-        min-width: 1200px;
         height: calc(100% - 30px);
 
         @media (min-width: 640px) {
@@ -21,14 +20,18 @@
             position: sticky;
             top: 0;
             background-color: var(--white);
-            box-shadow: 0 1px 0 0 var(--thColor);
 
             @media (prefers-color-scheme: dark) {
                 background-color: var(--bgColor);
             }
         }
 
+        & .thead .tr {
+            box-shadow: 0 1px 0 0 var(--thColor);
+        }
+
         & .tbody .tr {
+            border-top: 1px solid var(--borderColor);
             &:hover {
                 cursor: pointer;
                 background: var(--gray100);
@@ -115,7 +118,6 @@
             text-overflow: ellipsis;
             overflow: hidden;
             padding: 8px 10px;
-            border-top: 1px solid var(--borderColor);
             color: var(--textColor);
             font-size: 14px;
 
